--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 
 .button-container{
     height: 4em;
@@ -7,11 +7,11 @@
     align-items: center;
     font-weight: 2em;
     background-color: #181818;
-    color:#a4a3a5;
+    color:#c6bad3;
     flex: 1;
     outline: none;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     border-radius: 15px;
     margin: 10px;
 }
@@ -20,6 +20,6 @@
     background-color: #313131;
     color: white;
     font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     border-radius: 15px;
 }
