--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@3400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wgh@400;500;600&display=swap');
 
 body{
     background-color: #a4a3a5;
@@ -8,20 +8,20 @@ body{
 }
 
 .app{
-    margin-top: 10vh;
+    margin-top: 4vh;
     background-color: #181818;
-    border-radius: 5px;
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 85vh;
+    height: 90vh;
     padding-top: 10px;
     width: 25vw;
     padding-bottom: 10px;
 }
 
 .calc-container{
-    width: 300px;
+    width: 275px;
     height: auto;
 }
 
@@ -29,4 +29,9 @@ body{
     
     display: flex;
     width: 100%;
+}
+
+.empty{
+    height: 46px;
+    width: 46px;
 }
