--- a/src/components/ClearButton.css
+++ b/src/components/ClearButton.css
@@ -1,26 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap');
-
-.button-container{
-    height: 3em;
+.clear-btn{
+    height: 45px;
+    width: 45px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-weight: 2em;
-    background-color: #181818;
-    color:#c6bad3;
+    background-color: #313131;
+    color:white;
     flex: 1;
     outline: none;
     font-family: 'Rubik', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     border-radius: 15px;
     margin: 10px;
 }
-
-.operatorButt{
-    background-color: #313131;
-    color: white;
-    font-family: 'Rubik', sans-serif;
-    font-weight: 500;
-    border-radius: 15px;
-}
-
