--- a/src/components/input.css
+++ b/src/components/input.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap');
 
 .input{
-    height: 20vh;
+    height: 15vh;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Rubik', sans-serif;
     font-weight: 600;
     font-size: 4em;
     background-color: #181818;
