--- a/src/components/input.css
+++ b/src/components/input.css
@@ -3,13 +3,14 @@
 .input{
     height: 15vh;
     display: flex;
+    overflow-wrap: break-word;
     justify-content: flex-end;
     align-items: center;
     font-family: 'Rubik', sans-serif;
-    font-weight: 600;
-    font-size: 4em;
+    font-weight: 500;
+    font-size: 3em;
     background-color: #181818;
     color: white;
     padding: 0.5em;
-    outline: none;
+    outline: 1px solid  #181818;
 }
