--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wgh@400;500;600&display=swap');
 
 body{
-    background-color: #a4a3a5;
+    background-color: #6d6d6d;
     display: flex;
     justify-content: center;
     align-items: center;
